<resources>
    <string name="app_name">Weather</string>
    <string name="weather">Weather</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="display_name">Display name</string>
    <string name="phone_number">Phone number</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="permission_gps_title">Để thực hiện suôn sẻ việc xem thời tiết một cách chính xác</string>
    <string name="permission_gps_text">Tôi có thể truy cập thông tin địa điểm của bạn được không? Sau đó, bạn có thể bắt đầu trải nghiệm ứng dụng này.</string>
    <string name="bt_permission">Cho Phép</string>
</resources>
