<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".authentication.RegisterActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/cloud"
            android:contentDescription="@string/todo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="-40dp"
            android:textSize="30sp"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:text="@string/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outline_textfield_username"
            app:endIconMode="custom"
            app:boxStrokeWidth="0.6dp"
            app:boxStrokeColor="@color/purple"
            android:textColorHint="@color/grey"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="true"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/username"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outline_textfield_email"
            app:endIconMode="custom"
            app:boxStrokeWidth="0.6dp"
            app:boxStrokeColor="@color/purple"
            android:textColorHint="@color/grey"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="true"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outline_textfield_password"
            app:endIconMode="custom"
            app:boxStrokeWidth="0.6dp"
            app:boxStrokeColor="@color/purple"
            android:textColorHint="@color/grey"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outline_textfield_confirm_password"
            app:endIconMode="custom"
            app:boxStrokeWidth="0.6dp"
            app:boxStrokeColor="@color/purple"
            android:textColorHint="@color/grey"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/border_button"
            android:layout_marginTop="25dp"
            android:layout_height="60dp"/>
    </LinearLayout>
</layout>
