<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".permission.PermissionActivity">
        <LinearLayout
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center"
                android:src="@drawable/permission_icon"
                android:layout_width="200dp"
                android:layout_height="200dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:textColor="@color/black"
                android:text="@string/permission_gps_title"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black"
                android:text="@string/permission_gps_text"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_permission_gps"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold"
            android:text="@string/bt_permission"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_height="60dp"
            />
    </RelativeLayout>
</layout>